add details tag

--- a/index.html
+++ b/index.html
@@ -173,18 +173,22 @@
         <div class="7">
 	  <h2>Learning</h2>
           <article>
-	    <p>Есть три составляющих обучения - знания, умения, навыки.</p>
-	    <p>Знания - это то, что вы получаете на уроках (видео или офлайн) и то, что у вас остается в мозгу. 
-		 Самая ненадежная структура. Если не подкреплять, то через пару дней от знаний ничего не останется.</p>
-	    <p>Умения - это когда вы с помощью знаний можете что-то сделать. Можете применить знания. Поэтому практика очень важна.</p>
-	    <p>Навык - это умение, доведенное до автоматизма. На этом этапе вы становитесь программистом. 
-			Требует много практики. Очень много.</p>
-	    <p>Пройдете весь путь ЗУН - будет счастье.</p>
-	    <p>Есть еще 4 составляющая обучения - информация. Она стоит до знаний. Информацию вы получаете на ютюбе и в 
-		 прочих злачных местах. Информация не задерживается в голове. Совсем. Но вам кажется, что задержалась. 
-		 Это такой большой обман мозга.
-		 Не нужно его обманывать, а нужно учиться и практиковаться. Тогда станете программистом или кем угодно. 
-		 Это универсальные советы для любого дела.</p>
+	    <details>
+		    <summary>
+	    		<p>Есть три составляющих обучения - знания, умения, навыки.</p>
+		    </summary>
+	    		<p>Знания - это то, что вы получаете на уроках (видео или офлайн) и то, что у вас остается в мозгу. 
+		 		Самая ненадежная структура. Если не подкреплять, то через пару дней от знаний ничего не останется.</p>
+	    		<p>Умения - это когда вы с помощью знаний можете что-то сделать. Можете применить знания. Поэтому практика очень важна.</p>
+	    		<p>Навык - это умение, доведенное до автоматизма. На этом этапе вы становитесь программистом. 
+					Требует много практики. Очень много.</p>
+	    		<p>Пройдете весь путь ЗУН - будет счастье.</p>
+	    		<p>Есть еще 4 составляющая обучения - информация. Она стоит до знаний. Информацию вы получаете на ютюбе и в 
+		 		прочих злачных местах. Информация не задерживается в голове. Совсем. Но вам кажется, что задержалась. 
+		 		Это такой большой обман мозга.
+		 		Не нужно его обманывать, а нужно учиться и практиковаться. Тогда станете программистом или кем угодно. 
+		 		Это универсальные советы для любого дела.</p>
+	    </details>
 	  </article>
         </div>
       </section>
