--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 	  <h2>Learning</h2>
           <article>
 	    <details>
-		    <summary><p>Есть три составляющих обучения - знания, умения, навыки.</p></summary>
+		    <summary>Есть три составляющих обучения - знания, умения, навыки.</summary>
 	    		<p>Знания - это то, что вы получаете на уроках (видео или офлайн) и то, что у вас остается в мозгу. 
 		 		Самая ненадежная структура. Если не подкреплять, то через пару дней от знаний ничего не останется.</p>
 	    		<p>Умения - это когда вы с помощью знаний можете что-то сделать. Можете применить знания. Поэтому практика очень важна.</p>
