--- a/index.html
+++ b/index.html
@@ -188,6 +188,9 @@
 		 		Это универсальные советы для любого дела.</p>
 	    </details>
 	  </article>
+	  <ul>
+		  <li><a href"http://javarush.ru/cs50.html" target="_blank" title="javarush.ru">CS50 на русском</a></li>
+	  </ul>
         </div>
       </section>
       <!--END learning-->
