--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         <div class="7">
 	  <h2>Learning</h2>
 	  <ul>
-	    <li><a href"http://javarush.ru/cs50.html" target="_blank" title="javarush.ru">CS50 на русском</a></li>
+	    <li><a href="http://javarush.ru/cs50.html" target="_blank" title="javarush.ru">CS50 на русском</a></li>
 	  </ul>
           <article>
 	    <details>
