--- a/index.html
+++ b/index.html
@@ -175,6 +175,23 @@
 	  <ul>
 	    <li><a href="http://javarush.ru/cs50.html" target="_blank" title="javarush.ru">CS50 на русском</a></li>
 	  </ul>
+	  <h3>HTML<h3>
+		  <ul>
+			  <li><a href="https://htmlacademy.ru/" title="HTML Academy" target="_blank">HTML Academy</a></li>
+			  <li></li>
+			  <li></li>
+			  <li></li>
+		  </ul>
+	  <h3>CSS3</h3>
+	  <h3>JS</h3>
+		  <ul>
+			  <li><a href="http://learn.javascript.ru/" title="Современный учебник Javascript" target="_blank">Современный учебник Javascript</a></li>
+			  <li><a href="https://www.youtube.com/playlist?list=PLaEXvLxQXu_0cCfWRm9x61Jf8wG8C1-Ho" 
+				 title="React Club (React, redux lessons in Russian)" 
+				 target="_blank">React Club (React, redux lessons in Russian)</a></li>
+			  <li></li>
+			  <li></li>
+		  </ul>
           <article>
 	    <details>
 		    <summary>Есть три составляющих обучения - знания, умения, навыки.</summary>
