--- a/index.html
+++ b/index.html
@@ -174,8 +174,9 @@
 	  <h2>Learning</h2>
 	  <ul>
 	    <li><a href="http://javarush.ru/cs50.html" target="_blank" title="javarush.ru">CS50 на русском</a></li>
+	    <li><a href="https://ru.hexlet.io/" title="hexlet.io" target="_blank">hexlet.io</a></li>
 	  </ul>
-	  <h3>HTML<h3>
+	  <h3>HTML</h3>
 		  <ul>
 			  <li><a href="https://htmlacademy.ru/" title="HTML Academy" target="_blank">HTML Academy</a></li>
 			  <li></li>
