--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
 			<summary>
 				<b>2016</b>
 			</summary>
-			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.codewars.com/"
-			   	alt="codewars.com" target="_blank" 
-				title="codewars.com (2016-12-08)">Achieve mastery through challenge on codewars.com</a><br>
+			
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://vc.ru/p/csssr-programming"
 			   	alt="Куда пойти учиться программисту" target="_blank" 
 				title="Куда пойти учиться программисту (2016-12-08)">Куда пойти учиться программисту: советы опытного тимлида, преподавателя и новичка</a><br>	
@@ -188,9 +186,11 @@
 		  <ul>
 			  <li><a href="http://learn.javascript.ru/" title="Современный учебник Javascript" target="_blank">Современный учебник Javascript</a></li>
 			  <li><a href="https://www.youtube.com/playlist?list=PLaEXvLxQXu_0cCfWRm9x61Jf8wG8C1-Ho" 
-				 title="React Club (React, redux lessons in Russian)" 
+				 title="Youtube" 
 				 target="_blank">React Club (React, redux lessons in Russian)</a></li>
-			  <li></li>
+			  <li><a href="https://www.codewars.com/"
+			   	alt="codewars.com" target="_blank" 
+				title="На практике полезно решать каты из Codewars.">Achieve mastery through challenge on codewars.com</a></li>
 			  <li></li>
 		  </ul>
           <article>
