--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 	  <h2>Learning</h2>
 	  <ul>
 	    <li><a href="http://javarush.ru/cs50.html" target="_blank" title="javarush.ru">CS50 на русском</a></li>
-	    <li><a href="https://ru.hexlet.io/" title="hexlet.io" target="_blank">hexlet.io</a></li>
+	    
 	  </ul>
 	  <h3>HTML</h3>
 		  <ul>
@@ -185,9 +185,13 @@
 	  <h3>JS</h3>
 		  <ul>
 			  <li><a href="http://learn.javascript.ru/" title="Современный учебник Javascript" target="_blank">Современный учебник Javascript</a></li>
+			  <li><a href="https://ru.hexlet.io/" title="hexlet.io" target="_blank">hexlet.io</a></li>
+			  <li><a href="https://www.youtube.com/watch?v=H6G63NKRSi8&list=PL363QX7S8MfSxcHzvkNEqMYbOyhLeWwem" 
+				 title="видеокурс Sorax по основам JavaScript" 
+				 target="_blank">Видеокурс Sorax по основам JavaScript (Youtube)</a></li>
 			  <li><a href="https://www.youtube.com/playlist?list=PLaEXvLxQXu_0cCfWRm9x61Jf8wG8C1-Ho" 
 				 title="Youtube" 
-				 target="_blank">React Club (React, redux lessons in Russian)</a></li>
+				 target="_blank">React Club (React, redux lessons in Russian on Youtube)</a></li>
 			  <li><a href="https://www.codewars.com/"
 			   	alt="codewars.com" target="_blank" 
 				title="На практике полезно решать каты из Codewars.">Achieve mastery through challenge on codewars.com</a></li>
