--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
 				title="На практике полезно решать каты из Codewars.">Achieve mastery through challenge on codewars.com</a></li>
 			  <li></li>
 		  </ul>
+		<p>JavaScript: The Definitive Guide — читать обязательно. Лучше раза три. А потом держать под рукой как справочник.</p>
           <article>
 	    <details>
 		    <summary>Есть три составляющих обучения - знания, умения, навыки.</summary>
