--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
 			  <li><a href="https://www.codewars.com/"
 			   	alt="codewars.com" target="_blank" 
 				title="На практике полезно решать каты из Codewars.">Achieve mastery through challenge on codewars.com</a></li>
-			  <li></li>
+			  <li>JavaScript: The Definitive Guide — читать обязательно. Лучше раза три. А потом держать под рукой как справочник.</li>
 		  </ul>
-		<p>JavaScript: The Definitive Guide — читать обязательно. Лучше раза три. А потом держать под рукой как справочник.</p>
+		
           <article>
 	    <details>
 		    <summary>Есть три составляющих обучения - знания, умения, навыки.</summary>
