--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
 			<summary>
 				<b>2016</b>
 			</summary>
-			
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://medium.freecodecamp.com/5-key-learnings-from-the-post-bootcamp-job-search-9a07468d2331#.rhk1pvvjb"
+			   	alt="medium.freecodecamp.com" target="_blank" 
+				title="I spent 3 months applying to jobs after a coding bootcamp. Here’s what I learned. (2016-12-08)">I spent 3 months applying to jobs after a coding bootcamp. Here’s what I learned.</a><br>	
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://vc.ru/p/csssr-programming"
 			   	alt="Куда пойти учиться программисту" target="_blank" 
 				title="Куда пойти учиться программисту (2016-12-08)">Куда пойти учиться программисту: советы опытного тимлида, преподавателя и новичка</a><br>	
