--- a/index.html
+++ b/index.html
@@ -178,9 +178,13 @@
 	  </ul>
 	  <h3>HTML</h3>
 		  <ul>
+			  <li><a href="https://github.com/h5bp/Front-end-Developer-Interview-Questions/tree/master/Translations/Russian#html" 
+				 title="Front-end-Developer-Interview-Questions" 
+				 target="_blank">Вопросы кандидату на должность front-end разработчика</a></li>
+			  <li><a href="https://github.com/h5bp/Front-end-Developer-Interview-Questions" 
+				 title="Front-end-Developer-Interview-Questions" target="_blank">Front-end-Developer-Interview-Questions</a></li>
+			  <li></li>
 			  <li><a href="https://htmlacademy.ru/" title="HTML Academy" target="_blank">HTML Academy</a></li>
-			  <li></li>
-			  <li></li>
 			  <li></li>
 		  </ul>
 	  <h3>CSS3</h3>
