--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 		}
 		
 		header h1 a:hover {
-			
 			text-decoration: none;
 		}
 		
@@ -27,9 +26,7 @@
 			background: #cbecdf;
 		}
 		
-		a {
-			
-			
+		a {			
     			text-decoration: none; /* Убираем подчеркивание у ссылок */
 		}
    	
@@ -52,10 +49,12 @@
 		<header class="header">
     		  <h1><a href="/" class="logo">Home Page</a></h1>
     		    <nav>
-		      <a href="#mooc">MOOC</a>
-		      <a href="#web-dev-log">WebDevLog</a>
-		      <a href="#websites">Websites</a>
-		      <a href="#learning">Learning</a>
+		      <ul>
+		        <li><a href="#mooc">MOOC</a></li>
+		        <li><a href="#web-dev-log">WebDevLog</a></li>
+		        <li><a href="#websites">Websites</a></li>
+		        <li><a href="#learning">Learning</a></li>
+		      </ul>
 		    </nav>
 		</header>		
 		<!--END header-->
