@supports изменит вашу жизнь

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Home page</title>
 	
 	<style type="text/css">
-		.header {
+		.header h1 {
 			background-color: ;
 			text-align: center;
 			text-decoration: none;
@@ -80,6 +80,9 @@
 			<summary>
 				<b>2016</b>
 			</summary>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://frontender.info/supports-will-change-your-life/"
+			   	alt="frontender.info" target="_blank" 
+				title="frontender.info (2016-12-08)">@supports изменит вашу жизнь</a><br>	
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://medium.freecodecamp.com/5-key-learnings-from-the-post-bootcamp-job-search-9a07468d2331#.rhk1pvvjb"
 			   	alt="medium.freecodecamp.com" target="_blank" 
 				title="I spent 3 months applying to jobs after a coding bootcamp. Here’s what I learned. (2016-12-08)">I spent 3 months applying to jobs after a coding bootcamp. Here’s what I learned.</a><br>	
