--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 			<summary>
 				<b>2016</b>
 			</summary>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://nicothin.pro/page/icon-fonts-2017"
+			   	alt="SVG" target="_blank" 
+				title="SVG (2016-12-08)">Иконочные шрифты и почему они не нужны</a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://frontender.info/supports-will-change-your-life/"
 			   	alt="frontender.info" target="_blank" 
 				title="frontender.info (2016-12-08)">@supports изменит вашу жизнь</a><br>	
