--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 			<summary>
 				<b>2016</b>
 			</summary>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://dev.opera.com/articles/new-structural-elements-in-html5/"
+			   	alt="elements-in-html5" 
+				title="dev.opera.com (2016-12-09)">New Structural Elements in HTML5</a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://nicothin.pro/page/icon-fonts-2017"
 			   	alt="SVG" target="_blank" 
 				title="SVG (2016-12-08)">Иконочные шрифты и почему они не нужны</a><br>
