--- a/index.html
+++ b/index.html
@@ -199,8 +199,12 @@
 			  <li></li>
 		  </ul>
 	  <h4>CSS3</h4>
+		<ul>
+		  <li><a href="http://flexbox.io/" title="flexbox.io">What The Flexbox?! by Wes Bos</a></li>
+		</ul>
 	  <h4>JS</h4>
 		  <ul>
+			  <li><a href="https://javascript30.com/" title="Build 30 things in 30 days with 30 tutorials">30 Day Vanilla JS Coding Challenge by Wes Bos</a></li>
 			  <li><a href="http://learn.javascript.ru/" title="Современный учебник Javascript" target="_blank">Современный учебник Javascript</a></li>
 			  <li><a href="https://ru.hexlet.io/" title="hexlet.io" target="_blank">hexlet.io</a></li>
 			  <li><a href="https://www.youtube.com/watch?v=H6G63NKRSi8&list=PL363QX7S8MfSxcHzvkNEqMYbOyhLeWwem" 
