--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<title>Home page</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="My personal draft">
-	<meta name="author" content="Yevgen Farasevych">
-	<title>Home page</title>
-	
+	<meta name="author" content="Yevgen Farasevych">	
+	<link rel="stylesheet" href="styles.css"><!-- the type attribute is not necessary -->
 	<style type="text/css">
 		.header h1 {
 			background-color: ;
