--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 			<summary>
 				<b>2016</b>
 			</summary>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.w3schools.com/html/html5_syntax.asp"
+			   	alt="HTML5 Style Guide and Coding Conventions" 
+				title="w3schools (2016-12-10)">HTML5 Style Guide and Coding Conventions</a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.w3schools.com/html/html5_semantic_elements.asp"
 			   	alt="HTML5 Semantic Elements" 
 				title="w3schools (2016-12-10)">New Semantic Elements in HTML5</a><br>
