--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Yevgen Farasevych">	
   <link rel="stylesheet" href="styles.css"><!-- the type attribute is not necessary -->
   <style type="text/css">
-    .header h1 {
+    .header {
 			background-color: ;
 			text-align: center;
 			text-decoration: none;
