--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 			  <summary>
 				  <b>2016</b>
 			  </summary>
+			  	<a href="https://dev.opera.com/articles/pwa-resources/" title="dev.opera.com (to reed)"><b>Progressive Web Apps: The definitive collection of resources</b></a><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.w3schools.com/html/html5_syntax.asp"
-			   	alt="HTML5 Style Guide and Coding Conventions" 
-				title="w3schools (2016-12-10)">HTML5 Style Guide and Coding Conventions</a><br>
+			   	title="w3schools (2016-12-10)">HTML5 Style Guide and Coding Conventions</a><br>
 				&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.w3schools.com/html/html5_semantic_elements.asp"
 			   	alt="HTML5 Semantic Elements" 
 				title="w3schools (2016-12-10)">New Semantic Elements in HTML5</a><br>
