--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 			  <li><a href="https://www.youtube.com/watch?v=H6G63NKRSi8&list=PL363QX7S8MfSxcHzvkNEqMYbOyhLeWwem" title="видеокурс Sorax по основам JavaScript" >Видеокурс Sorax по основам JavaScript (Youtube)</a></li>
 			  <li><a href="https://www.youtube.com/playlist?list=PLaEXvLxQXu_0cCfWRm9x61Jf8wG8C1-Ho" 
 				 title="Youtube">React Club (React, redux lessons in Russian on Youtube)</a></li>
-			  <li><a href="https://www.codewars.com/" alt="codewars.com" title="На практике полезно решать каты из Codewars.">Achieve mastery through challenge on codewars.com</a></li>
+			  <li><a href="https://www.codewars.com/" title="На практике полезно решать каты из Codewars.">Achieve mastery through challenge on codewars.com</a></li>
 			  <li>JavaScript: The Definitive Guide — читать обязательно. Лучше раза три. А потом держать под рукой как справочник.</li>
 		  </ul>		
       <article>
