--- a/index.html
+++ b/index.html
@@ -142,75 +142,74 @@
               <a href="https://medium.com/@ABatickaya/%D0%B4%D0%BE%D1%81%D1%82%D1%83%D0%BF%D0%BD%D0%BE%D1%81%D1%82%D1%8C-%D1%81%D0%B0%D0%B9%D1%82%D0%BE%D0%B2-%D0%B4%D0%BB%D1%8F-%D1%81%D0%B0%D0%BC%D1%8B%D1%85-%D0%BC%D0%B0%D0%BB%D0%B5%D0%BD%D1%8C%D0%BA%D0%B8%D1%85-28d8ab6ebd3d#.ob2lp2pgr" title="Перевод на medium.com">Доступность сайтов для самых маленьких</a></li>
           </ul>
         </details>
-    </section>
-    <!--END log-->
-    <!--BEGIN websites-->
-    <section id="websites" class="section">
-      <h2>Websites</h2>	
-      <ul>
-        <li><a href="http://kwambio.com/" title="kwambio.com (2016-11-30)">kwambio.com</a></li>
-        <li><a href="http://simurai.com/" title="simurai.com (2016-11-29)">simurai.com</a></li>
-        <li><a href="http://rog.ie/" title="rog.ie (2016-11-29)">rog.ie</a></li>
-        <li><a href="http://riverco.de/" title="Coderiver (2016-11-28)">riverco.de</a></li>
-      </ul>
-    </section>
-    <!--END websites-->
-    <!--BEGIN learning-->
-    <section id="learning">        
-      <h2>Learning</h2>
-      <ul>
-        <li><a href="http://javarush.ru/cs50.html" title="javarush.ru">CS50 на русском</a></li>
-      </ul>
-      <h4>HTML</h4>
-      <ul>
-        <li><a href="https://github.com/h5bp/Front-end-Developer-Interview-Questions/tree/master/Translations/Russian#html" title="Front-end-Developer-Interview-Questions">Вопросы кандидату на должность front-end разработчика</a></li>
-        <li><a href="https://github.com/h5bp/Front-end-Developer-Interview-Questions" title="Front-end-Developer-Interview-Questions">Front-end-Developer-Interview-Questions</a></li>
-        <li><a href="https://htmlacademy.ru/" title="HTML Academy">HTML Academy</a></li>
-      </ul>
-      <h4>CSS3</h4>
-      <ul>
-        <li><a href="http://flexbox.io/" title="flexbox.io">What The Flexbox?! by Wes Bos</a></li>
-      </ul>
-      <h4>JS</h4>
-      <ul>
-        <li>
-          <a href="https://javascript30.com/" title="Build 30 things in 30 days with 30 tutorials">30 Day Vanilla JS Coding Challenge by Wes Bos</a></li>
-        <li>
-          <a href="http://learn.javascript.ru/" title="Современный учебник Javascript">Современный учебник Javascript</a></li>
-        <li>
-          <a href="https://ru.hexlet.io/" title="hexlet.io">hexlet.io</a></li>
-        <li>
-          <a href="https://www.youtube.com/watch?v=H6G63NKRSi8&list=PL363QX7S8MfSxcHzvkNEqMYbOyhLeWwem" title="видеокурс Sorax по основам JavaScript" >Видеокурс Sorax по основам JavaScript (Youtube)</a></li>
-        <li>
-          <a href="https://www.youtube.com/playlist?list=PLaEXvLxQXu_0cCfWRm9x61Jf8wG8C1-Ho" title="Youtube">React Club (React, redux lessons in Russian on Youtube)</a></li>
-        <li>
-          <a href="https://www.codewars.com/" title="На практике полезно решать каты из Codewars.">Achieve mastery through challenge on codewars.com</a></li>
-        <li>JavaScript: The Definitive Guide — читать обязательно. Лучше раза три. А потом держать под рукой как справочник.</li>
-      </ul>
-      <article>
-        <h4>Три составляющих обучения</h4>
-        <details>
-          <summary>Знания, умения, навыки</summary>
-            <p>Знания - это то, что вы получаете на уроках (видео или офлайн) и то, что у вас остается в мозгу. Самая ненадежная структура. Если не подкреплять, то через пару дней от знаний ничего не останется.</p>
-            <p>Умения - это когда вы с помощью знаний можете что-то сделать. Можете применить знания. Поэтому практика очень важна.</p>
-            <p>Навык - это умение, доведенное до автоматизма. На этом этапе вы становитесь программистом. 
-            Требует много практики. Очень много.</p>
-            <p>Пройдете весь путь ЗУН - будет счастье.</p>
-            <p>Есть еще 4 составляющая обучения - информация. Она стоит до знаний. Информацию вы получаете на ютюбе и в 
-            прочих злачных местах. Информация не задерживается в голове. Совсем. Но вам кажется, что задержалась. 
-            Это такой большой обман мозга.
-            Не нужно его обманывать, а нужно учиться и практиковаться. Тогда станете программистом или кем угодно. 
-            Это универсальные советы для любого дела.</p>
-        </details>
-      </article>       
-    </section>
-    <!--END learning-->
-    <!--BEGIN footer-->
-    <footer class="footer">      
-      <p>Copyright © 2016 All rights reserved.</p>      
-    </footer>
-    <!--END footer-->
-  </div>
-  <!--END layout-->
-</body>
+      </section>
+      <!--END log-->
+      <!--BEGIN websites-->
+      <section id="websites" class="section">
+        <h2>Websites</h2>	
+        <ul>
+          <li><a href="http://kwambio.com/" title="kwambio.com (2016-11-30)">kwambio.com</a></li>
+          <li><a href="http://simurai.com/" title="simurai.com (2016-11-29)">simurai.com</a></li>
+          <li><a href="http://rog.ie/" title="rog.ie (2016-11-29)">rog.ie</a></li>
+          <li><a href="http://riverco.de/" title="Coderiver (2016-11-28)">riverco.de</a></li>
+        </ul>
+      </section>
+      <!--END websites-->
+      <!--BEGIN learning-->
+      <section id="learning">        
+        <h2>Learning</h2>
+        <ul>
+          <li><a href="http://javarush.ru/cs50.html" title="javarush.ru">CS50 на русском</a></li>
+        </ul>
+        <h4>HTML</h4>
+        <ul>
+          <li><a href="https://github.com/h5bp/Front-end-Developer-Interview-Questions/tree/master/Translations/Russian#html" title="Front-end-Developer-Interview-Questions">Вопросы кандидату на должность front-end разработчика</a></li>
+          <li><a href="https://github.com/h5bp/Front-end-Developer-Interview-Questions" title="Front-end-Developer-Interview-Questions">Front-end-Developer-Interview-Questions</a></li>
+          <li><a href="https://htmlacademy.ru/" title="HTML Academy">HTML Academy</a></li>
+        </ul>
+        <h4>CSS3</h4>
+        <ul>
+          <li><a href="http://flexbox.io/" title="flexbox.io">What The Flexbox?! by Wes Bos</a></li>
+        </ul>
+        <h4>JS</h4>
+        <ul>
+          <li>
+            <a href="https://javascript30.com/" title="Build 30 things in 30 days with 30 tutorials">30 Day Vanilla JS Coding Challenge by Wes Bos</a></li>
+          <li>
+            <a href="http://learn.javascript.ru/" title="Современный учебник Javascript">Современный учебник Javascript</a></li>
+          <li>
+            <a href="https://ru.hexlet.io/" title="hexlet.io">hexlet.io</a></li>
+          <li>
+            <a href="https://www.youtube.com/watch?v=H6G63NKRSi8&list=PL363QX7S8MfSxcHzvkNEqMYbOyhLeWwem" title="видеокурс Sorax по основам JavaScript" >Видеокурс Sorax по основам JavaScript (Youtube)</a></li>
+          <li>
+            <a href="https://www.youtube.com/playlist?list=PLaEXvLxQXu_0cCfWRm9x61Jf8wG8C1-Ho" title="Youtube">React Club (React, redux lessons in Russian on Youtube)</a></li>
+          <li>
+            <a href="https://www.codewars.com/" title="На практике полезно решать каты из Codewars.">Achieve mastery through challenge on codewars.com</a></li>
+          <li>JavaScript: The Definitive Guide — читать обязательно. Лучше раза три. А потом держать под рукой как справочник.</li>
+        </ul>
+        <article>
+          <h4>Три составляющих обучения</h4>
+          <details>
+            <summary>Знания, умения, навыки</summary>
+              <p>Знания - это то, что вы получаете на уроках (видео или офлайн) и то, что у вас остается в мозгу. Самая ненадежная структура. Если не подкреплять, то через пару дней от знаний ничего не останется.</p>
+              <p>Умения - это когда вы с помощью знаний можете что-то сделать. Можете применить знания. Поэтому практика очень важна.</p>
+              <p>Навык - это умение, доведенное до автоматизма. На этом этапе вы становитесь программистом. 
+              Требует много практики. Очень много.</p>
+              <p>Пройдете весь путь ЗУН - будет счастье.</p>
+              <p>Есть еще 4 составляющая обучения - информация. Она стоит до знаний. Информацию вы получаете на ютюбе и в прочих злачных местах. Информация не задерживается в голове. Совсем. Но вам кажется, что задержалась. 
+              Это такой большой обман мозга.
+              Не нужно его обманывать, а нужно учиться и практиковаться. Тогда станете программистом или кем угодно. 
+              Это универсальные советы для любого дела.</p>
+          </details>
+        </article>       
+      </section>
+      <!--END learning-->
+      <!--BEGIN footer-->
+      <footer class="footer">      
+        <p>Copyright © 2016 All rights reserved.</p>      
+      </footer>
+      <!--END footer-->
+    </div>
+    <!--END layout-->
+  </body>
 </html>
