--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
           </summary>
           <ul>
             <li>
+              <a href="https://habrahabr.ru/post/301594/" 
+              title="habrahabr (to reed)"
+              ><b>Линтинг CSS с помощью stylelint</b></a></li>
+            <li>
               <a href="https://dev.opera.com/articles/pwa-resources/" 
               title="dev.opera.com (to reed)"
               ><b>Progressive Web Apps: The definitive collection of resources</b></a></li>
