--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		a {			
 			text-decoration: none; /* Убираем подчеркивание у ссылок */
 		}
-   	
+    
 		a:hover { 
 			cursor:pointer; 
 			text-decoration: underline;
@@ -45,7 +45,7 @@
   <body>
     <!--BEGIN layout-->
     <div class="layout">
-      <!--BEGIN header-->	
+      <!--BEGIN header-->
       <header class="header">
         <h1><a href="/" class="logo">Home Page</a></h1>
         <nav>
@@ -71,7 +71,7 @@
       </section>
       <!--END mooc-->
       <!--BEGIN log -->
-      <section id="log"> 
+      <section id="log">
         <h2>WEB dev log</h2>
         <details open>
           <summary>
@@ -79,34 +79,73 @@
           </summary>
           <ul>
             <li>
-              <a href="https://habrahabr.ru/post/301594/" 
-              title="habrahabr (to reed)"
-              ><b>Линтинг CSS с помощью stylelint</b></a></li>
+              <a href="https://www.w3.org/Style/CSS20/"
+              ><b>История развития в датах и пресс-релиз из 1996 года</b></a></li>
             <li>
-              <a href="https://dev.opera.com/articles/pwa-resources/" 
+              <a href="https://www.youtube.com/watch?v=Ai-yt0b8iKE"
+              ><b>BEMup для начинающих 09.12.2016 (video)</b></a></li>
+            <li>
+              <a href="https://ru.bem.info/">bem.info</a></li>
+            <li>
+              <a href="https://www.youtube.com/watch?v=H4cG4tbc-xQ"
+              ><b>Sass для самых маленьких (video)</b></a></li>
+            <li>
+              <a href="https://www.youtube.com/watch?v=vW51JUVT66w"
+              ><b>Gulp для самых маленьких (video)</b></a></li>
+            <li>
+              <a href="https://www.youtube.com/watch?v=l1G425VcUUg"
+              ><b>Вебинар по БЭМ: сборка проекта с помощью gulp (video)</b></a></li>
+            <li>
+              <a href="http://www.master-web.info/css-html-javascript-linters-review/"
+              ><b>Обзор линтеров для HTML, CSS и JavaScript</b></a></li>
+            <li>
+              <a href="https://habrahabr.ru/post/301594/"><b>Линтинг CSS с помощью stylelint</b></a></li>
+            <li>
+              <a href="https://github.com/rwaldron/idiomatic.js/tree/master/translations/ru_RU"
+              title="github.com 2016-12-18">Принципы написания консистентного, идиоматического кода</a></li>
+            <li>
+              <a href="https://ashleynolan.co.uk/blog/frontend-tooling-survey-2016-results#experience-general"
+              title="The State of Front-End Tooling 2016">Инструменты 2016</a></li>
+            <li>
+              <a href="http://cssreference.io/"
+              title="cssreference.io">Справочник по CSS</a></li>
+            <li>
+              <a href="https://www.youtube.com/watch?v=YJwrBbze_Ec&feature=youtu.be&t=21m34s"
+              title="Youtube"><b>What Comes Next for the Web? (Chrome Dev Summit 2016) (video)</b></a></li>
+            <li>
+              <a href="https://resilientwebdesign.com/"
+              title="resilientwebdesign.com">Надёжный веб-дизайн, бесплатная книга Джереми Кита об основах, истории и будущем веба: онлайн, в PDF или аудио</a></li>
+            <li>
+              <a href="https://www.youtube.com/watch?v=Y_dsckWhclE"
+              title="Youtube"><b>Курс по HTML5/CSS3. Формы. Часть 8 (video)</b></a></li>
+            <li>
+              <a href="https://events.yandex.ru/events/yasubbotnik/10-dec-2016/"
+              title="video (to vatch)"><b>Я.Субботник по фронтенду (video)</b></a></li>
+            <li>
+              <a href="https://dev.opera.com/articles/pwa-resources/"
               title="dev.opera.com (to reed)"
               ><b>Progressive Web Apps: The definitive collection of resources</b></a></li>
             <li>
-              <a href="http://www.w3schools.com/html/html5_syntax.asp" 
+              <a href="http://www.w3schools.com/html/html5_syntax.asp"
               title="w3schools (2016-12-10)">HTML5 Style Guide and Coding Conventions</a></li>
             <li>
-              <a href="http://www.w3schools.com/html/html5_semantic_elements.asp" 
+              <a href="http://www.w3schools.com/html/html5_semantic_elements.asp"
               title="w3schools (2016-12-10)">New Semantic Elements in HTML5</a></li>
             <li>
-              <a href="https://dev.opera.com/articles/new-structural-elements-in-html5/" 
+              <a href="https://dev.opera.com/articles/new-structural-elements-in-html5/"
               title="dev.opera.com (2016-12-09)">New Structural Elements in HTML5</a></li>
             <li>
-              <a href="http://nicothin.pro/page/icon-fonts-2017" 
+              <a href="http://nicothin.pro/page/icon-fonts-2017"
               title="SVG (2016-12-08)">Иконочные шрифты и почему они не нужны</a></li>
             <li>
-              <a href="http://frontender.info/supports-will-change-your-life/" 
+              <a href="http://frontender.info/supports-will-change-your-life/"
               title="frontender.info (2016-12-08)">@supports изменит вашу жизнь</a></li>
             <li>
-              <a href="https://medium.freecodecamp.com/5-key-learnings-from-the-post-bootcamp-job-search-9a07468d2331#.rhk1pvvjb" 
+              <a href="https://medium.freecodecamp.com/5-key-learnings-from-the-post-bootcamp-job-search-9a07468d2331#.rhk1pvvjb"
               title="3 months applying to jobs. (2016-12-08)"
               >I spent 3 months applying to jobs after a coding bootcamp. Here’s what I learned.</a></li>
             <li>
-              <a href="https://vc.ru/p/csssr-programming" 
+              <a href="https://vc.ru/p/csssr-programming"
               title="Куда пойти учиться программисту (2016-12-08)"
               >Куда пойти учиться программисту: советы опытного тимлида, преподавателя и новичка</a></li>
             <li>
@@ -199,7 +238,7 @@
       </section>
       <!--END websites-->
       <!--BEGIN learning-->
-      <section id="learning">        
+      <section id="learning">
         <h2>Learning</h2>
         <ul>
           <li><a href="http://javarush.ru/cs50.html" title="javarush.ru">CS50 на русском</a></li>
@@ -252,15 +291,16 @@
               Это такой большой обман мозга. Не нужно его обманывать, а нужно учиться и практиковаться. 
               Тогда станете программистом или кем угодно. Это универсальные советы для любого дела.</p>
           </details>
-        </article>       
+        </article>
       </section>
       <!--END learning-->
       <!--BEGIN footer-->
-      <footer class="footer">      
-        <p>Copyright © 2016 All rights reserved.</p>      
+      <footer class="footer">
+        <p>Copyright © 2016 All rights reserved.</p>
       </footer>
       <!--END footer-->
     </div>
     <!--END layout-->
   </body>
 </html>
+
