--- a/html-stuff.html
+++ b/html-stuff.html
@@ -16,9 +16,14 @@
         </nav>
       </header>
       <!--END header -->
-      <P>Links:<br>
-        <a href="https://html.spec.whatwg.org/multipage/index.html"
-        >HTML Living Standard — Last Updated 19 December 2016</a></P>
+      <ul>Links:
+        <li>
+          <a href="https://html.spec.whatwg.org/multipage/index.html"
+          >HTML Living Standard — Last Updated 19 December 2016</a></li>
+        <li>
+          <a href="http://htmldog.com/guides/html/advanced/conditionalcomments/"
+          >Conditional Comments</a></li>
+      </ul>
       <!-- BEGIN forms -->
       <section id="forms" class="section forms">
         <h2>Forms</h2>
@@ -135,7 +140,7 @@
         </fieldset>
         <fieldset>
           <legend>&lt textarea &gt</legend>
-          <textarea name="" id="" cols="30" rows="5" wrap="">           
+          <textarea name="" id="" cols="30" rows="5" wrap="">
           </textarea>
            <p>Атрибут <mark>wrap=""</mark> отвечает за формат переноса текста на новую строку при отправке данных на сервер. Может иметь три значения: SOFT - все в одну строку; HARD - оправится с переносами; OFF.</p>
         </fieldset>
