--- a/portfolio/01--PSD-to-HTML.html
+++ b/portfolio/01--PSD-to-HTML.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>01--PSD-to-HTML</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,700|Raleway:200" rel="stylesheet">
-  <link rel="stylesheet" href="/01--PSD-to-HTML/style.css">
+  <link rel="stylesheet" href="01--PSD-to-HTML/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -27,7 +27,7 @@
     <section>
       <article>
         <h2>Explore more about World best Service</h2>
-        <img class="img-left" src="/01--PSD-to-HTML/phone.jpg" alt="phone picture">
+        <img class="img-left" src="01--PSD-to-HTML/phone.jpg" alt="phone picture">
         <p>Probatus cotidieque mea ad, eu ornatus percipit sententiae usu. Ei pri velit aeque, ne quaeque vivendum praesent sea. Ea quo modo saperet reprimique, in sed oporteat splendide, an per causae nonumes sensibus. Vis ullamcorper instructior te. Tempor corpora definitiones ne mea, in cum tale summo bonorum. Ea duo quem quodsi animal, et brute quodsi euripidis usu. Ei pri velit aeque, ne quaeque vivendum praesent sea. Ea quo modo saperet reprimique, in sed oporteat splendide, an per causae nonumes sensibus. Ea quo modo saperet reprimique, in sed oporteat splendide, an per causae nonumes sensibus.</p>
         <p>Probatus cotidieque mea ad, eu ornatus percipit sententiae usu. Ei pri velit aeque, ne quaeque vivendum praesent sea. Ea quo modo saperet reprimique, in sed oporteat splendide, an per causae nonumes sensibus. Vis ullamcorper instructior te. Tempor corpora definitiones ne mea, in cum tale summo bonorum. Ea duo quem quodsi animal, et brute quodsi euripidis usu. Ei pri velit aeque, ne quaeque vivendum praesent sea. Ea quo modo saperet reprimique, in sed oporteat splendide, an per causae nonumes sensibus. Ea quo modo saperet reprimique, in sed oporteat splendide, an per causae nonumes sensibus.</p>
       </article>
