add link to index html

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="git1"><a href="https://desktop.github.com/" title="GitHub Desktop">desktop.github.com</a></li>
               <li class="svg1">
                 <a href="https://habrahabr.ru/post/276249/">Лучшие бесплатные коллекции векторных иконок</a></li>
               <li>
