--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </header>
       <!--END header-->
       <!-- begin portfolio -->
-      <section class="portfolio">
+      <section id="portfolio">
         <h2>Portfolio</h2>
         <ul>
           <li><a href="/portfolio/01--PSD-to-HTML/01--PSD-to-HTML.html" title="2017-03-20">My first page (01--PSD-to-HTML)</a></li>
@@ -88,6 +88,10 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="git1 video">
+                <a href="https://www.youtube.com/watch?v=4XpnKHJAok8">Tech Talk: Linus Torvalds on git</a></li>
+              <li class="git1 video">
+                <a href="https://www.youtube.com/watch?v=SfSYrebXLDE">Git/GitHub - работа под Windows</a></li>
               <li class="git1"><a href="https://desktop.github.com/" title="desktop.github.com">GitHub Desktop</a></li>
               <li class="svg1">
                 <a href="https://habrahabr.ru/post/276249/">Лучшие бесплатные коллекции векторных иконок</a></li>
