--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="git1">
+                <a href="https://github.com/splincode/text/tree/master/git">GIT draft by splincode</a></li>
+              <li class="git1"><a href="https://git-scm.com/book/ru/v1">Pro Git book</a></li>
+              <li class="video">
+                <a href="https://www.ted.com/talks/linus_torvalds_the_mind_behind_linux#t-124229">Linus Torvalds: The mind behind Linux</a></li>
               <li class="git1 video">
                 <a href="https://www.youtube.com/watch?v=4XpnKHJAok8">Tech Talk: Linus Torvalds on git</a></li>
               <li class="git1 video">
