--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="My personal draft">
     <meta name="author" content="Yevgen Farasevych">
     <link rel="stylesheet" href="styles.css"><!-- the type attribute is not necessary -->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <style type="text/css">
 		.header {
 			background-color: ;
@@ -24,6 +25,7 @@
 		
 		body {
 			background: #cbecdf;
+      font-family: 'Open Sans', sans-serif;
 		}
 		
 		a {			
