--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		
 		body {
 			background: #cbecdf;
-      font-family: 'Open Sans', sans-serif;
+      font-family: monospace;
 		}
 		
 		a {			
