font fize 1.2em

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 		
 		body {
 			background: #cbecdf;
-      font-family: monospace;
+      font-family: monospace; /*'Open Sans', sans-serif*/
+      font-size: 1.15em;
 		}
 		
 		a {			
