head, font size + links

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <title>Home page</title>
+    <meta charset="UTF-8">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="My personal draft">
     <meta name="author" content="Yevgen Farasevych">
+    <title>Home page</title>
     <link rel="stylesheet" href="styles.css"><!-- the type attribute is not necessary -->
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <style type="text/css">
 		.header {
 			background-color: ;
@@ -26,7 +25,7 @@
 		body {
 			background: #cbecdf;
       font-family: monospace; /*'Open Sans', sans-serif*/
-      font-size: 1.15em;
+      font-size: 1em;
 		}
 		
 		a {			
@@ -91,6 +90,10 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="css1">
+                <a href="https://necolas.github.io/normalize.css/">Normalize.css — сайт проекта</a></li>
+              <li class="css1">
+                <a href="https://htmlacademy.ru/blog/64-about-normalize-css">О normalize.css</a></li>
               <li class="git1">
                 <a href="https://github.com/splincode/text/tree/master/git">GIT draft by splincode</a></li>
               <li class="git1"><a href="https://git-scm.com/book/ru/v1">Pro Git book</a></li>
