--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="css1">
+                <a href="http://css-live.ru/articles/css-gridy-prishli-nasovsem.html">CSS-гриды пришли насовсем</a></li>
               <li class="git1">
                 <a href="https://github.com/splincode/text/tree/master/git">GIT установка и старт(splincode/text)</a></li>
               <li class="css1">
