--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
         <h2>WEB dev log</h2>
           <h3>2017</h3>
             <ul>
+              <li class="css1 flexbox1">
+                <a href="https://vk.com/videos-101965347?section=album_466" title="video VK">Знакомство с СSS Flexbox</a></li>
               <li class="css1">
                 <a href="http://css-live.ru/articles/css-gridy-prishli-nasovsem.html">CSS-гриды пришли насовсем</a></li>
               <li class="git1">
